k8s/docker-registry/docker-registry.yaml
---
# Source: docker-registry/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  labels:
    app: docker-registry
    chart: docker-registry-1.9.4
    release: docker-registry
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
      name: registry
      targetPort: 5000
  selector:
    app: docker-registry
    release: docker-registry
---
# Source: docker-registry/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  labels:
    app: docker-registry
    chart: docker-registry-1.9.4
    release: docker-registry
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: docker-registry
      release: docker-registry
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: docker-registry
        release: docker-registry
      annotations:
        checksum/config: c99bb016eb280d8a0195307400df7b878be6f707f12c3a8ad76046a69aba3767
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: docker-registry
          image: "registry:2.7.1"
          imagePullPolicy: IfNotPresent
          command:
          - /bin/registry
          - serve
          - /etc/docker/registry/config.yml
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
          resources:
            {}
          volumeMounts:
            - name: auth
              mountPath: /auth
              readOnly: true
            - name: data
              mountPath: /var/lib/registry/
            - name: "docker-registry-config"
              mountPath: "/etc/docker/registry"
      volumes:
        - name: auth
          secret:
            secretName: docker-registry-secret
            items:
            - key: htpasswd
              path: htpasswd
        - name: data
          emptyDir: {}
        - name: docker-registry-config
          configMap:
            name: docker-registry-config
---
# Source: docker-registry/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: docker-registry
  labels:
    app: docker-registry
    chart: docker-registry-1.9.4
    release: docker-registry
    heritage: Helm
  annotations:
      cert-manager.io/cluster-issuer: "letsencrypt-production"
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/proxy-body-size: "1000m"
spec:
  rules:
    - host: ___PLACEHOLDER_DOCKER_REGISTRY_DOMAIN___
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-registry
              servicePort: 5000
  tls:
    - hosts:
      - ___PLACEHOLDER_DOCKER_REGISTRY_DOMAIN___
      secretName: ___PLACEHOLDER_DOCKER_REGISTRY_TLS_SECRET_NAME___
